# the-coop

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SCOPE.md  SIGNIN.md  main.py  pyproject.toml
config/: settings.py  urls.py
coop/: admin.py  decorators.py  models.py  tests.py  urls.py  views.py
coop/api/: endpoints.py
coop/management/commands/: seed.py
coop/middleware/: auth.py
coop/migrations/: 0001_initial.py  0002_timeentry_location.py  0003_woodinventory.py  0004_add_time_start_end.py
coop/templatetags/: coop_tags.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: main.js
frontend/src/islands/: LogHoursForm.svelte  StatsWidget.svelte
frontend/src/styles/: app.css
static/: manifest.json  sw.js
templates/: base.html
templates/coop/: approvals.html  dashboard.html  finances.html  hours.html  inventory.html  log_hours.html  manage_jobs.html  team_hours.html
templates/partials/: approval_row.html  hours_table.html  inventory_table.html  job_row.html  team_hours_table.html
