[project]
name = "the-coop"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.13",
    "django-ninja>=1.6.2",
    "django-vite>=3.1.0",
    "gunicorn>=25.3.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "python-jose[cryptography]>=3.5.0",
    "whitenoise>=6.12.0",
]
